--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "@ngrok/ngrok": "^1.7.0",
     "axios": "^1.13.4",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
